--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Programação WEB CEUB - Turma B</title>
 </head>
 <body>
-    
+    <h1>Eu sou um título de nível 1</h1>
+    <h2>EU sou título de nível 2</h2>
 </body>
 </html>
