--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@
 <body>
     <h1>Eu sou um título de nível 1</h1>
     <h2>EU sou título de nível 2</h2>
+    <p>EU sou um parágrafo</p>
 </body>
 </html>
